# flasktasks

./: .env_example  .gitignore  README.md  app.py  create_fake_tasks.py  pyproject.toml  yoyo.ini
flasktasks/: config.py
flasktasks/database/: __init__.py  task.py
flasktasks/migrations/: 20231208_01_pyX53.sql
flasktasks/resources/: helpers.py  home_resources.py  task_resources.py
flasktasks/tests/: mocks.py  test_database.py  test_resources.py
