[tool.poetry]
name = "flasktasks"
version = "0.1.0"
description = "REST API for a task list"
authors = ["Erick Wilts"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.14"
yoyo-migrations = "^8.2.0"
setuptools = "^69.0.2"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
mypy = "^1.7.1"
vulture = "^2.10"
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
